@@ -1,0 +1,267 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<meta name="robots" content="index, follow"><META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE"><META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+<script language="javascript">
+//-- These colors are used in design templates
+
+var col_primary="#ffffff";
+var col_secondary="#ffffff";
+var col_tertiary="#ffffff";
+var col_background="#ffffff";
+
+</script>
+
+
+<script language="JavaScript" src="../scripts/ic_globals_published.js"></script><script language="JavaScript" src="scripts/user.js"></script><script language="JavaScript" src="scripts/photoalbum.js"></script>
+<title>Functional Unit Representation Method (FURM)</title>
+<link rel="stylesheet" media="screen" href="scripts/template.css"><link rel="stylesheet" media="all" href="scripts/website.css"><link rel="stylesheet" media="print" href="scripts/print.css"><link rel="stylesheet" media="all" href="scripts/2custom.css"><link rel="stylesheet" media="all" href="scripts/icwebsiteelement.css">
+</head>
+<body class="background" id="wide" onload="processMenus();sizeColumns();">
+<div id="printwrap">
+<div id="nav-left">
+	<div id="headertop" class="primary">
+		<h1 id="website-title">Functional Unit Representation Method (FURM)</h1>
+	</div>
+	<div id="inner">
+		<div id="nav-wrapper" class="tertiary">
+			<div id="navcontainer" class="tertiary">
+				<div><a href="index.html" class="tertiary" target="_self"><h3>Home</h3></a></div>
+            <div><a href="about.html" class="tertiary" target="_self"><h3>About</h3></a></div>
+            <div><a href="contact.html" class="tertiary" target="_self"><h3>Contact</h3></a></div>
+            <div><a href="projects.html" class="tertiary" target="_self"><h3>Projects</h3></a></div>
+            <div><a href="documents.html" class="tertiary" target="_self"><h3>Documents</h3></a></div>
+            <div><a href="software.html" class="tertiary" target="_self"><h3>Software</h3></a></div>
+            <div><a href="future.html" class="tertiary" target="_self"><h3>Future</h3></a></div>
+
+			</div>
+			<div id="navconmeasure"></div>
+		</div>
+		<div id="content" class="background">
+			<h2 id="website-slogan" class="secondary">ISL:  In Silico (Isolated Perfused Rat) Liver</h2>
+			<div id="sloganmeasure" class="clearer"></div>
+			<table id="content-table">
+        	 	<tr>
+					<td id="content-table-main" align="left" valign="top">
+						<!-- Start content section --><div id="pagecols">
+<div id="column1">
+<div id="colbody1" class="colbody">
+<div class="building_block" id="pgbldblk3">
+<div class="blockbody" id="body_pgbldblk3">
+
+
+   <p>The ISL is the first functional unit representation being developed with FURM.  We started developing both FURM and the ISL simultaneously because no <em>method</em> is ever useful without having some examples of its product.</p>
+
+   <p>We chose the liver as our functional unit for this first representation for a couple of reasons.  It is relatively homogenous (various parts of the liver look and act the same).  There is a large amount of data of different types to validate against.  And there are relatively stable pedigreed models of liver function out there.</p>
+
+   <p>A snapshot of the source code, parameters, input, and experimental results can be found <a href="./software.html">here</a>.</p>
+
+   <p>A more complete description of this model suite can be found in the Initial Technical Report for FURM on the <a href="./documents.html">Documents</a> page.  But, we'll describe it briefly here.</p>
+
+   <table width="100%">
+    <tr>
+       <td><h3>Liver Structure</h3>
+
+       <p>A liver is built of several lobes, each made up of hundreds of lobules.  Each lobule consists of several acini organized around terminal afferent vessels. An acinus is a network of sinusoids that separate meshes of one-cell thick plates made up of hepatocytes.  Intra-acinar hepatocytes exhibit location-specific properties.</td>
+
+       <td><img src="./images/lobule.png"  width="200" height="200" align="right"></td>
+    </tr>
+
+    <tr>
+       <td colspan="2"><h3>The <em>In Silico</em> Experimental Apparatus</h3></td>
+    </tr>
+
+    <tr>
+       <td colspan="2"><p>The ISL models were set up to mimic specific wet lab experiments where a rat liver is perfused with a fluid containing various solutes.  Some of these solutes are extracted by the hepatocytes and some of which are not.  The initial experiments implemented in the ISL are with a non-extracted solute (Sucrose).</p></td>
+    </tr>
+
+    <tr>
+      <td colspan="2">
+        <p>The model suite consists of three <em>in silico</em> models:
+          <ul>
+            <li>DatModel -- A wrapper for data taken from the wet lab experiments.</li>
+            <li>RefModel -- A two-compartment model developed by Michael Roberts and his colleagues at the University of Queensland, Queensland Australia.</li>
+            <li>ArtModel -- Our agent-based model.</li>
+          </ul>
+        </p>
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="2">
+        <p>An experiment agent (ExperAgent) executes all three of these models in tandem.  The ExperAgent is responsible for:
+          <ol>
+            <li>managing the resources (inputs, memory, etc.)  required for each experiment, </li>
+            <li>controlling the models, </li>
+            <li>taking data from the models, </li>
+            <li>progressing from one experimental setup to the next, </li>
+            <li>scoring each model against some performance measure, and </li>
+            <li>acquiring telemetric data from the experiments.</li>
+          </ol>
+        </p>
+
+        <p>This set of requirements allows for a wide array of experiments.  Experiments are treated as <strong>discovery mechanisms</strong>, not validation exercises.  In that context, one might want to explore the behavior of the 3 different models in response to variations of input.  An hypothesis might be that the reference model is more stable than the articulated model.  An experiment would then be designed to execute the three models using varying inputs (changes in the bolus times or delivery profiles).  A set of measurement devices would be hooked up to the ExperAgent that measured the various observables believed to indicate stability.  A scoring device would be hooked up to the ExperAgent to measure the stability of each model based on those measurements.  In order to vary the inputs, the ExperAgent will need an input device and some characterization of that device indicating its tolerances, limits, and "normal" usage as well as some heuristics as to how to employ the device.  The ExperAgent can then vary the inputs according to some regular pattern (quantities and flow rates that start at an initial point and progress by a constant interval).  Or it could use some search algorithm to target instability indicators evidenced by the stability measures.</p>
+
+        <p>Another potential experiment might be intended to discover how a structural change in one or more of the models might affect their behavior given the same inputs.  In this case, the ExperAgent would insert/remove/change the structural component in automated ways and measure their output.</p>
+
+        <p>Techniques like parameter sweeps, sensitivity analysis, and adaptive simulation are all subcategories of these types of experiments and are effected through the ExperAgent.
+
+        <p>The following figures indicate the structure of the apparatus in different experiments.</p>
+     </td>
+    </tr>
+
+    <tr><td colspan="2"><center><img alt="Monte-Carlo" src="./images/mc.png"></center></td></tr>
+    <tr><td colspan="2"><center><img alt="Parameter Sweeps" src="./images/ps.png"></center></td></tr>
+    <tr><td colspan="2"><center><img alt="Monte-Carlo & Parameter Sweep" src="./images/psnmc.png"></center></td></tr>
+
+    <tr>
+      <td colspan="2">
+       <p>These requirements also encourage optimization for the reusability of the models and the ancillary modules being used to carry out the experiments.</p>
+       <p>For example, because measurements have to be taken many times and applied to many different models and then subsequently compared, efficiency dictates that the module implementing the measurement be independent of both the subject (the ExperAgent) and the object (the model or other component being measured) of the measurement.  This isolates the code that implements the measurement and encourages that all measures are implemented with the same or similar interfaces, as well.</p>
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="2">
+        <br><h3>ISL Objectives</h3>
+        <p>The ISL has two primary objectives:
+          <ol>
+            <li>Demonstrate the efficacy and feasibility of FURM as a method for developing functional unit models, and</li>
+            <li>Provide a platform by which Agent-Based Modeling (ABM) can be used to augment the other modeling techniques being used to study the liver.</li>
+          </ol>
+        <p>For details about the elements of the ISL and how they satisfy these two objectives, see the project <a href="./documents.html">Documents</a>
+    </tr>
+
+
+
+</div>
+</div>
+<div class="building_block" id="pgbldblk27">
+<div class="blockbody" id="body_pgbldblk27">
+<table border="0" name="" width="100%" cellpadding="5" cellspacing="0">
+
+
+</table>
+</div>
+</div>
+</div>
+</div>
+<div id="column2">
+<div id="colbody2" class="colbody"></div>
+</div>
+<div id="column3">
+<div id="colbody3" class="colbody"></div>
+</div>
+</div><div id="measurescroll" style="clear:both;"></div><table border="0" width="100%" cellpadding="0" cellspacing="0" id="other_footer">
+<tr>
+<td align="left" valign="middle">Copyright 2008 Tempus Dictum, Inc.
+</td>
+</tr>
+<tr>
+<td align="left" valign="middle"></td>
+</tr>
+</table>
+<!-- End content section -->
+					</td>
+					<td id="content-table-sub" align="left" valign="top" class="accent">&nbsp;</td>
+				</tr>
+			</table>
+		</div>
+		<div id="clearmeasure" class="clearer"></div>
+	</div>
+	<div id="footer" class="primary"></div>
+</div>
+</div>
+<div class="clearer"></div>
+
+<script language="javaScript">
+// Column Height Script
+function pngHeight() {
+	var navagt=navigator.userAgent.toLowerCase();
+var msie5=0;
+if ((navagt.indexOf('msie 5.5')==-1)&&(navagt.indexOf('msie 5')!=-1)) msie5=1;
+var msie55=0;
+if (navagt.indexOf('msie 5.5')!=-1) msie55=1;
+var safari=0;
+if (navagt.indexOf('safari')!=-1) safari=1;
+var msie6=0;
+if (navagt.indexOf("msie 6.")!=-1) msie6=1;
+var msie_pre7=0;
+if((msie5)||(msie55)||(msie6)) {
+	msie_pre7=1;
+}
+
+	if (msie_pre7) {
+		document.getElementById('footer').style.zIndex=0;
+		document.getElementById('inner').style.zIndex=1000;
+	} else {
+		document.getElementById('footer').style.zIndex=0;
+		document.getElementById('inner').style.zIndex=1000;
+	}
+	var pngColHeight1=document.getElementById('column1').clientHeight;
+	var pngColHeight2=document.getElementById('column2').clientHeight;
+	var pngColHeight3=document.getElementById('column3').clientHeight;
+	var othFootHeight=40;
+	if(document.getElementById('other_footer')) {
+	othFootHeight=document.getElementById('other_footer').clientHeight;
+	}
+	var pngFeatImgHt=document.getElementById('content-table-sub').clientHeight;
+	var pngSloganHeight = document.getElementById('sloganmeasure').offsetTop;
+
+	pngColHeight=pngColHeight1;
+	
+	if(pngColHeight<pngColHeight2) pngColHeight=pngColHeight2;
+	if(pngColHeight<pngColHeight3) pngColHeight=pngColHeight3;
+	
+	pngColRemainder=(pngColHeight1 + pngColHeight2 + pngColHeight2) - pngColHeight;
+	
+	if((pngColHeight + othFootHeight)<418) {
+		pngColHeight=(418 - othFootHeight);
+	}	
+		
+	var navConHeight=document.getElementById('navconmeasure').offsetTop;
+		
+	if (document.getElementById('nav-top')) {
+		document.getElementById('content').style.height=(pngColHeight + pngSloganHeight + othFootHeight + 3) + "px";
+	
+	} else if (document.getElementById('nav-left') || document.getElementById('nav-right')) {
+	pngFinalHt=(pngColHeight + pngSloganHeight + othFootHeight);
+	
+	if(navConHeight>pngFinalHt) pngFinalHt=navConHeight;
+	
+	if (document.all) {
+		if (msie_pre7) {
+			document.getElementById('content').style.height=(pngFinalHt);
+			document.getElementById('inner').style.height=(pngFinalHt);
+			document.getElementById('nav-wrapper').style.height=(pngFinalHt + 7);
+		} else {
+			document.getElementById('content').style.height=(pngFinalHt);
+			document.getElementById('inner').style.height=(pngFinalHt);
+			document.getElementById('nav-wrapper').style.height=(pngFinalHt);
+		}
+		
+	} else {
+		document.getElementById('content').style.height=(pngFinalHt + 4) + "px";
+		document.getElementById('inner').style.height=(pngFinalHt + 4) + "px";
+		document.getElementById('nav-wrapper').style.height=(pngFinalHt + 4) + "px";
+	}
+	
+	}
+	if (document.getElementById('nav-top') ) {
+			pngYOffset = 11; 
+	}
+	if (document.getElementById('nav-left') ) {
+			pngYOffset = 2; 
+	}
+	if (document.getElementById('nav-right') ) {
+			pngYOffset = 2; 
+	}
+}
+var oldhandler = window.onload;
+window.onload = (typeof oldhandler == "function")
+    ? function() { oldhandler(); pngHeight(); } : pngHeight; </script>
+
+</div>
+</body>
+</html>
